@@ -67,7 +67,7 @@ Q5  =  -2.01099218183624371326e-07; /* BE8AFDB7 6E09C32D */
 
 double __expm1(double x)
 {
-	double y,hi,lo,c,t,e,hxs,hfx,r1;
+	double y,hi,lo,c=0,t,e,hxs,hfx,r1;
 	int k,xsb;
 	unsigned int hx;
 
